# dionysos

./: .eslintrc.json  .gitignore  .pnp.js  LICENSE  Pipfile  README.md  cards.sql  favicon.psd  fill-db-all-cards.sh  fill-db-test.sh  messages.txt  nginx.example.conf  package-lock.json  package.json  protocol-new.txt  protocol.txt  redis-schema.txt  run-daemon.sh  run-dev-server.sh  run-prod-server.sh  run-server-daemon.sh  run-server.sh  run.sh  schema.sql  test-cards.sql  test-data.sql  uwsgi-dev.yaml  uwsgi-prod.yaml  uwsgi.yaml  webpack.config.js
client/: .eslintrc.json  card.js  functions.js  game.js  handlers.js  index.js  main.js  package.json  viewmodel.js  webpack.config.js
client/src/: game.js  main.js  user.js  utils.js
dionysos/: __init__.py  auth.py  cards.py  config.py  game.py  handlers.py  utils.py  views.py
dionysos/static/css/: main.css
dionysos/static/js/: main.js  messages-eng.js
dionysos/static/messages/: en.json
dionysos/templates/: cards-list.html  index.html
server/: __init__.py  auth.py  cards.sql  config-dev.py  config-prod.py  config.py  game.py  handlers.py  pyproject.toml  run-prod-server.sh  schema.sql  serve-dev  serve-prod  test-data.sql  utils.py  uwsgi-dev.yaml  uwsgi-prod.yaml
server/dionysos/: __init__.py  auth.py  cards.py  config.py  errors.py  game.py  handlers.py  utils.py  views.py
server/dionysos/templates/: index.html
server/templates/: cards-list.html  index.html
static/css/: main.css
static/img/favicons/: LICENSE
static/messages/: en.json
